--- a/styles/general.css
+++ b/styles/general.css
@@ -36,7 +36,7 @@ nav {
   transform: translateY(-50%);
   display: flex;
   flex-direction: column;
-  gap: 1.2rem;
+  gap: clamp(0.8rem, 1.2vw, 2rem);
 }
 
 .nav-btn::before {
@@ -55,7 +55,7 @@ nav {
   background: none;
   border: none;
   padding: 0.2rem 0;
-  font-size: 2rem;
+  font-size: clamp(1.5rem, 1.6vw + 0.8rem, 3rem);
   letter-spacing: 2px;
   font-weight: 700;
   cursor: pointer;
@@ -64,6 +64,7 @@ nav {
   transition: 0.25s;
   text-align: left;
 }
+
 
 .nav-btn:hover {
   color: #00e9e9;
@@ -105,4 +106,17 @@ section:not(#home) {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+@media (min-width: 1600px) {
+  .nav-btn {
+    font-size: 3.5rem;
+    letter-spacing: 3px;
+  }
+}
+
+@media (max-width: 800px) {
+  .nav-btn {
+    font-size: 1.4rem;
+  }
 }
